# GenAI

LearnRAG/: Ingestion.py  main.py  mdiumblog.txt  pyproject.toml
learnlangchain/: README.md  main.py  pyproject.toml
